--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -34,8 +34,32 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `v${process.env.PACKAGE_VERSION}`,
-              name: `Desktop App v${process.env.PACKAGE_VERSION}`,
-              body: 'See the assets to download and install this version.',
+              name: `Toddy v${process.env.PACKAGE_VERSION}`,
+              body: `## Download Toddy v${process.env.PACKAGE_VERSION}
+
+Choose the right file for your operating system:
+
+- **macOS (Apple Silicon)**: \`toddy_${process.env.PACKAGE_VERSION}_aarch64.dmg\`
+- **macOS (Intel)**: \`toddy_${process.env.PACKAGE_VERSION}_x64.dmg\`
+- **Windows**: \`toddy_${process.env.PACKAGE_VERSION}_x64-setup.exe\`
+- **Linux (Debian/Ubuntu)**: \`toddy_${process.env.PACKAGE_VERSION}_amd64.deb\`
+- **Linux (AppImage)**: \`toddy_${process.env.PACKAGE_VERSION}_amd64.AppImage\`
+
+### ⚠️ macOS Installation Note
+
+If you see a **"damaged and can't be opened"** error on macOS:
+
+1. **Right-click** (or Control+click) on the Toddy app
+2. Select **"Open"** from the menu
+3. Click **"Open"** in the dialog
+
+[See detailed instructions](https://github.com/Creative-koda-lab/toddy/blob/main/docs/INSTALLING_UNSIGNED_MAC.md)
+
+This happens because the app is not code-signed (requires $99/year Apple Developer account). The app is completely safe and open-source.
+
+### What's New
+
+See the assets below to download and install this version.`,
               draft: true,
               prerelease: false
             })
@@ -84,6 +108,12 @@ jobs:
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
+          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
           args: ${{ matrix.args }}
